// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/MessageAttachment should call actions.doPostActionWithCookie on handleAction 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <div
        data-testid="markdown-mock"
      >
        pretext
      </div>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: rgb(255, 255, 255);"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <div
                  data-testid="markdown-mock"
                >
                  short text
                </div>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <img
                class="attachment__image"
                data-testid="size-aware-image-mock"
                src="image_url"
              />
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <div
                data-testid="markdown-mock"
              >
                footer
              </div>
            </div>
            <div>
              <div
                class="attachment-actions"
              >
                <button
                  data-action-cookie="cookie-contents"
                  data-action-id="action_id_1"
                  data-testid="action-button-mock"
                >
                  action_name_1
                </button>
              </div>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <img
              data-testid="size-aware-image-mock"
              src="thumb_url"
            />
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match snapshot 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <div
        data-testid="markdown-mock"
      >
        pretext
      </div>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: rgb(255, 255, 255);"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <div
                  data-testid="markdown-mock"
                >
                  short text
                </div>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <img
                class="attachment__image"
                data-testid="size-aware-image-mock"
                src="image_url"
              />
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <div
                data-testid="markdown-mock"
              >
                footer
              </div>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <img
              data-testid="size-aware-image-mock"
              src="thumb_url"
            />
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match snapshot and render a field with a number value 1`] = `
<td
  class="attachment-field"
>
  <div
    data-testid="markdown-mock"
  >
    1234
  </div>
</td>
`;

exports[`components/post_view/MessageAttachment should match snapshot when no footer is provided (even if footer_icon is provided) 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <div
        data-testid="markdown-mock"
      >
        pretext
      </div>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: rgb(255, 255, 255);"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <div
                  data-testid="markdown-mock"
                >
                  short text
                </div>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <img
                class="attachment__image"
                data-testid="size-aware-image-mock"
                src="image_url"
              />
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <img
              data-testid="size-aware-image-mock"
              src="thumb_url"
            />
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match snapshot when the attachment has a link in the title 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          <div
            data-testid="markdown-mock"
          >
            Do you like https://mattermost.com?
          </div>
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          />
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match snapshot when the attachment has an emoji in the title 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          <div
            data-testid="markdown-mock"
          >
            Do you like :pizza:?
          </div>
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          />
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match snapshot when the attachment hasn't any emojis in the title 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          <div
            data-testid="markdown-mock"
          >
            Don't you like emojis?
          </div>
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          />
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match snapshot when the footer is truncated 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          <div
            data-testid="markdown-mock"
          >
            footer
          </div>
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          >
            <div
              class="attachment__footer-container"
            >
              <div
                data-testid="markdown-mock"
              >
                aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa…
              </div>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should match value on getFieldsTable 1`] = `
<div>
  <table
    class="attachment-fields"
  >
    <thead>
      <tr />
    </thead>
    <tbody>
      <tr />
    </tbody>
  </table>
  <table
    class="attachment-fields"
  >
    <thead>
      <tr>
        <th
          class="attachment-field__caption"
        >
          <div
            data-testid="markdown-mock"
          >
            title_1
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="attachment-field"
        >
          <div
            data-testid="markdown-mock"
          >
            value_1
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    class="attachment-fields"
  >
    <thead>
      <tr>
        <th
          class="attachment-field__caption"
        >
          <div
            data-testid="markdown-mock"
          >
            title_2
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="attachment-field"
        >
          <div
            data-testid="markdown-mock"
          >
            value_2
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/post_view/MessageAttachment should match value on renderPostActions 1`] = `
<div
  class="attachment-actions"
>
  <button
    data-action-id="action_id_1"
    data-testid="action-button-mock"
  >
    action_name_1
  </button>
  <button
    data-action-id="action_id_2"
    data-testid="action-button-mock"
  >
    action_name_2
  </button>
  <div
    data-testid="action-menu-mock"
  >
    action_name_3
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment should not render content box if there is no content 1`] = `
<div
  class="attachment attachment--pretext"
>
  <div
    class="attachment__thumb-pretext"
  >
    <div
      data-testid="markdown-mock"
    >
      This is a pretext.
    </div>
  </div>
</div>
`;
